SyntacticAnalyzer/tests/fail/sentenciasimple-expresion03.java
class foo {
	ctor (int n1)
	var int n2;
	{
		// error lexico
		// cadena mal formada
		(n1 < + 3 > n2 == true + "cadena);
	}
}
